tests/snapshots/parser_error_fixtures/missing_tuple_paren.snap
---
source: tests/parser_error_fixtures_snapshots.rs
---
Fixture: examples/parser_errors/missing_tuple_paren.flx
== compile ==
failed (parse)
== diagnostics ==
error[E076]: Missing Closing Delimiter

Expected a closing `)` to match this opening `(`.

  examples/parser_errors/missing_tuple_paren.flx:8:16
  |
8 |     let pair = (1, "hello"
  |                ^

Note:
  while parsing function `main`

note: Expected `)` before this token.
  examples/parser_errors/missing_tuple_paren.flx:9:5
  |
9 |     print(pair)
  |     ^^^^^
== stdout ==
<not executed>
